--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "autoria_analyser",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://nemaksym.github.io/autoria-analyser",
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
@@ -24,7 +25,9 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build"
+    "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -44,6 +47,7 @@
     ]
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.182"
+    "@types/lodash": "^4.14.182",
+    "gh-pages": "^3.2.3"
   }
 }
