--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.182",
+    "@types/react-router-hash-link": "^2.4.5",
     "gh-pages": "^3.2.3"
   }
 }
